# anki-git-ui

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  snapshot_report.html
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PACKAGING.md  RELEASE-VERIFICATION.md
docs/adr/: 0001-deck-job-and-workflow.md  0002-collapsed-git-interface.md  0003-subscription-registry.md  0004-anki-interop-facade.md  0005-deck-lifecycle-module.md
packaging/: pyinstaller.spec
packaging/linux/: AnkiGitUI.desktop  build_appimage.sh
packaging/macos/: AnkiGitUI.command  Info.plist.template  build_app.sh
packaging/runtime_hooks/: _anki_runtime_hook.py
src/anki_git_ui/: __init__.py  __main__.py  app.py  config.py  jobs.py  state.py
src/anki_git_ui/domain/: anki_interop.py  apkg_paths.py  deck_metadata.py  deck_ops.py  git_ops.py  jobs.py  models.py  profile_ops.py  text_utils.py  theme.py
src/anki_git_ui/screens/: add_deck.py  dashboard.py  deck_detail.py  help.py  modals.py  settings.py  welcome.py
src/anki_git_ui/styles/: app.tcss  components.tcss  modals.tcss  screens.tcss  widgets.tcss
src/anki_git_ui/widgets/: deck_card.py  log_panel.py  updates_panel.py
src/anki_git_ui/workers/: check_updates_worker.py  download_deck_worker.py  (+4 more)
tests/: conftest.py  test_add_deck_flow.py  test_anki_interop.py  test_config.py  test_download_worker.py  test_filtered_decks_worker.py  test_git_ops.py  test_jobs.py  test_make_apkg_worker.py  test_skeleton.py  test_smart_decks_worker.py  test_snapshots.py  test_text_utils.py  test_theme.py  test_update_worker.py
